// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page tests Before rendering 1`] = `
<div>
  <h1
    class="display-3 title"
  >
    Your To-Dos:
  </h1>
  <div
    class="body"
  >
    <div
      class="spinner"
    >
      <div
        class="spinner-border spinner-border"
      />
      <p>
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Home page tests Renders category with todos 1`] = `
<div>
  <h1
    class="display-3 title"
  >
    Your To-Dos:
  </h1>
  <div
    class="body"
  >
    <a
      class="link-text"
      href="/edit/category/0"
    >
      <div
        class="category"
        id="category-0"
      >
        <div
          class="row"
        >
          <div
            class="category-id col"
            xmd="1"
          >
            <h4>
              0
            </h4>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="category-name col-12"
          >
            <h3>
              Unsorted Todos
            </h3>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="todo-container col"
          >
            <a
              class="link-text"
              href="/edit/todo/321"
            >
              <div
                class="todo-item card"
                id="todo-321"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="card-title h5"
                  >
                    test todo
                  </div>
                  <p
                    class="card-text"
                  >
                    test todo contents
                  </p>
                  <div
                    class="text-muted todo-id card-subtitle h6"
                  >
                    321
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </a>
    <a
      class="link-text"
      href="/edit/category/123"
    >
      <div
        class="category"
        id="category-123"
      >
        <div
          class="row"
        >
          <div
            class="category-id col"
            xmd="1"
          >
            <h4>
              123
            </h4>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="category-name col-12"
          >
            <h3>
              Test Category
            </h3>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </a>
  </div>
</div>
`;

exports[`Home page tests Renders only category 1`] = `
<div>
  <h1
    class="display-3 title"
  >
    Your To-Dos:
  </h1>
  <div
    class="body"
  >
    <a
      class="link-text"
      href="/edit/category/0"
    >
      <div
        class="category"
        id="category-0"
      >
        <div
          class="row"
        >
          <div
            class="category-id col"
            xmd="1"
          >
            <h4>
              0
            </h4>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="category-name col-12"
          >
            <h3>
              Unsorted Todos
            </h3>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </a>
    <a
      class="link-text"
      href="/edit/category/123"
    >
      <div
        class="category"
        id="category-123"
      >
        <div
          class="row"
        >
          <div
            class="category-id col"
            xmd="1"
          >
            <h4>
              123
            </h4>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="category-name col-12"
          >
            <h3>
              Test Category
            </h3>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </a>
  </div>
</div>
`;
